--- a/apps/internship/yaarme/task-3/index.html
+++ b/apps/internship/yaarme/task-3/index.html
@@ -260,73 +260,74 @@
 
 
     <!-- Added Sidebar Here -->
-    <div class="mobile-sidebar" id="sidenav-mobile">
-        <div class="ms-top-sec">
-            <div class="ms-ts-top">
-                <img width="30" height="30" alt="shaiq kar" class="ms-pimg" src="./content/nav-profile-icon.jpg" alt="Shaiq Kar">
-                <img src="./content/sidebar/moon.svg" class="ms-ts-top-switch" alt="Moon">
+    <div class="m-only">
+        <div class="mobile-sidebar" id="sidenav-mobile">
+            <div class="ms-top-sec">
+                <div class="ms-ts-top">
+                    <img width="30" height="30" alt="shaiq kar" class="ms-pimg" src="./content/nav-profile-icon.jpg" alt="Shaiq Kar">
+                    <img src="./content/sidebar/moon.svg" class="ms-ts-top-switch" alt="Moon">
+                </div>
+                <div class="ms-ts-bottom">
+                    <span>
+                        <span class="text-bold hoverable">Shaiq Iqbal Kar</span></br>
+                        <span class="text-small">+91 7006343764</span>
+                    </span>
+                    <span class="ms-drop hoverable">
+                        <img src="./content/sidebar/arrow.svg" alt="Drop Cap" id="drop-nav-btn">
+                    </span>
+                </div>
             </div>
-            <div class="ms-ts-bottom">
-                <span>
-                    <span class="text-bold hoverable">Shaiq Iqbal Kar</span></br>
-                    <span class="text-small">+91 7006343764</span>
-                </span>
-                <span class="ms-drop hoverable">
-                    <img src="./content/sidebar/arrow.svg" alt="Drop Cap" id="drop-nav-btn">
-                </span>
+            <div class="ms-drop-nav" id="drop-nav">
+                <a href="#" class="ms-drop-item ms-drop-profile">
+                    <img alt="shaiq kar" src="./content/nav-profile-icon.jpg">
+                    <span class="text-bold">Shaiq Iqbal Kar</span>
+                </a>
+                <a href="#" class="ms-drop-item">
+                    <img src="./content/sidebar/plus.svg" style="width:1.5rem">
+                    <span class="text-bold">Add Account</span>
+                </a>
             </div>
-        </div>
-        <div class="ms-drop-nav" id="drop-nav">
-            <a href="#" class="ms-drop-item ms-drop-profile">
-                <img alt="shaiq kar" src="./content/nav-profile-icon.jpg">
-                <span class="text-bold">Shaiq Iqbal Kar</span>
-            </a>
-            <a href="#" class="ms-drop-item">
-                <img src="./content/sidebar/plus.svg" style="width:1.5rem">
-                <span class="text-bold">Add Account</span>
-            </a>
-        </div>
-        <div class="ms-nav">
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/users.svg">
-                <span class="text-bold">New Group</span>
-            </a>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/lock.svg">
-                <span class="text-bold">New Secret Chat</span>
-            </a>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/megaphone.svg">
-                <span class="text-bold">New Channel</span>
-            </a>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/user.svg">
-                <span class="text-bold">Contacts</span>
-            </a>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/phone.svg">
-                <span class="text-bold">Calls</span>
-            </a>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/bookmark.svg">
-                <span class="text-bold">Saved Messages</span>
-            </a>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/settings.svg">
-                <span class="text-bold">Settings</span>
-            </a>
-            <span class="ms-nav-break"></span>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/user-plus.svg">
-                <span class="text-bold">Invite Friends</span>
-            </a>
-            <a class="ms-nav-item">
-                <img src="./content/sidebar/faq.svg">
-                <span class="text-bold">Linkedin FAQ</span>
-            </a>
+            <div class="ms-nav">
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/users.svg">
+                    <span class="text-bold">New Group</span>
+                </a>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/lock.svg">
+                    <span class="text-bold">New Secret Chat</span>
+                </a>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/megaphone.svg">
+                    <span class="text-bold">New Channel</span>
+                </a>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/user.svg">
+                    <span class="text-bold">Contacts</span>
+                </a>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/phone.svg">
+                    <span class="text-bold">Calls</span>
+                </a>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/bookmark.svg">
+                    <span class="text-bold">Saved Messages</span>
+                </a>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/settings.svg">
+                    <span class="text-bold">Settings</span>
+                </a>
+                <span class="ms-nav-break"></span>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/user-plus.svg">
+                    <span class="text-bold">Invite Friends</span>
+                </a>
+                <a class="ms-nav-item">
+                    <img src="./content/sidebar/faq.svg">
+                    <span class="text-bold">Linkedin FAQ</span>
+                </a>
+            </div>
         </div>
     </div>
-
 
     <script src="JS/main.js"></script>
     <!-- Added js here -->
