--- a/apps/internship/yaarme/task-3/index.html
+++ b/apps/internship/yaarme/task-3/index.html
@@ -14,7 +14,7 @@
 <body id="body">
     <div class="main-navbar-wrap">
         <div class="main-navbar">
-            <span class="icon"></span>
+            <span class="icon i-logo"></span>
             <div class="input-wrap">
                 <span class="icon search-icon"></span>
                 <input type="text" placeholder="Search" class="search-bar">
@@ -25,7 +25,9 @@
                 <span class="icon suit-icon" title="Jobs"></span>
                 <span class="icon chat-icon" title="Messaging"></span>
                 <span class="icon notify-icon" title="Notifications"></span>
-                <span class="icon me-icon"></span>
+                <span class="icon me-icon">
+                    <img src="./CSS/img/nav-profile-icon.jpg" alt="shaiq kar">
+                </span>
                 <div class="work-icon">
                     <span class="icon work"></span>
                     <span class="work-cont">Work</span>
