--- a/apps/internship/yaarme/task-4-chat/index.html
+++ b/apps/internship/yaarme/task-4-chat/index.html
@@ -4,7 +4,12 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#26a69a">
+
     <title>YaarMe Chat</title>
+
+    <link rel="icon" type="image/png" sizes="32x32" href="./static/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./static/img/favicon-16x16.png">
 
     <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
 
