--- a/apps/internship/yaarme/task-4-chat/index.html
+++ b/apps/internship/yaarme/task-4-chat/index.html
@@ -32,7 +32,7 @@
             <div class="relative">
                 <a class="flex align-centre profile">
                     <img src="./static/img/profile-2.jpg" alt="Shaiq Kar">
-                    <span style="margin-left: .5rem;">Rachna Singh</span>
+                    <span style="margin-left: .5rem;">Profile</span>
                 </a>
             </div>
             <div class="relative">
