--- a/apps/internship/yaarme/task-5/instagram/index.html
+++ b/apps/internship/yaarme/task-5/instagram/index.html
@@ -140,6 +140,7 @@
                         <small>Seen</small>
                     </div>
                 </div>
+                <div class="chat-end"></div>
 
             </div> 
         </div>
