--- a/apps/internship/yaarme/task-5/instagram/index.html
+++ b/apps/internship/yaarme/task-5/instagram/index.html
@@ -8,6 +8,12 @@
 
     <link rel="stylesheet" href="./static/app.css">
 
+    <script type="text/javascript">
+        window.scroll({
+            behavior: 'smooth' 
+        });
+    </script>
+
 </head>
 
 <body id="display-only-mobile">
