--- a/apps/internship/yaarme/task-5/instagram/index.html
+++ b/apps/internship/yaarme/task-5/instagram/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Chat</title>
 
+    <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
+
     <link rel="stylesheet" href="./static/app.css">
 
     <script type="text/javascript">
