Added theme colors

--- a/apps/internship/yaarme/task-5/linkedin/index.html
+++ b/apps/internship/yaarme/task-5/linkedin/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0077B5">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <title>Linkedin | Messaging</title>
+
+    <!-- favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./static/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./static/img/favicon-16x16.png">
 
     <link rel="stylesheet" href="./static/app.css">
 
