Minor form issue fix

--- a/apps/internship/yaarme/task-5/instagram/index.html
+++ b/apps/internship/yaarme/task-5/instagram/index.html
@@ -159,7 +159,9 @@
             </span>
 
             <div class="msg-input">
-                <input type="text" placeholder="Message...">
+                <form method="POST">
+                    <input type="text" placeholder="Message...">
+                </form>
             </div>
 
             <div class="act-icons">
