Changed Header Color Scheme v2

--- a/apps/internship/yaarme/task-5/instagram/index.html
+++ b/apps/internship/yaarme/task-5/instagram/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0073b1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <title>Instagram Chat</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
